# Toys.R.ust.Server

./: .gitignore  Cargo.toml  README.md  build.sh  setup.sh  test_main.http
assets/: biography.html  contact.html  index.html  index.js
assets/resources/: test.txt
assets/style/: index.css
cli/: Cargo.toml
cli/src/: arg_parse.rs  lib.rs
src/: main.rs
src/cache/: Cargo.toml
src/cache/src/: lib.rs
src/cli/: Cargo.toml
src/cli/src/: arg_parse.rs  lib.rs
src/email_services/: Cargo.toml
src/email_services/src/: lib.rs
src/log/: Cargo.toml
src/model/: character.rs
src/notebooks/: Cargo.toml
src/notebooks/src/: lib.rs
