[package]
name = "lib-email_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lettre = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
