[package]
name = "lib-notebooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
reqwest = "0.11.16"
tower-http = {version ="0.4.0", features = ["fs", "trace", "set-header"]}
tempfile = "3.2"
futures = {version="0.3"}
tokio = { version = "1.28.0", features = ["full", "test-util"] }
